# stream-processor

./: Cargo.toml  README.md
.github/workflows/: audit.yml  docker.yml  general.yml
kafka/: docker-compose-community-small.yml
scripts/: init_env.sh
src/: lib.rs  processor.rs  sink.rs  source.rs  stream.rs  telemetry.rs  transformation.rs
src/avro/: confluence_avro.rs  mod.rs
src/domain/: test.rs
src/kafka_sink/: general.rs  kafka_avro_sink.rs  kafka_byte_sink.rs  mod.rs
src/kafka_source/: general.rs  kafka_avro_source.rs  kafka_byte_source.rs  mod.rs
src/object_store_sink/: azure_sink.rs  general.rs  mod.rs
tests/: integration_tests.rs
tests/transformations/: example_transformations.rs  mod.rs
